Ecommerce.Shared/Deploy/order-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api-worker
  namespace: ecommerce-service
  labels:
    app: order-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
    spec:
      containers:
      - name: order-worker
        image: # pull image from container registry
