Ecommerce.Shared/Deploy/catalog-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api-app
  namespace: ecommerce-service
  labels:
    app: catalog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
      - name: catalog-api
        image: evansmungai/catalog:latest
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 5001
          name: https
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api-svc
  namespace: ecommerce-service
spec:
  type: ClusterIP
  ports: 
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: catalog-api
