Ecommerce.Shared/Deploy/catalog-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-db
  namespace: ecommerce-service
  labels:
    app: catalog-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: catalog-db
  template:
    metadata:
      labels:
        app: catalog-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: dbPort
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
        volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: catalog-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-db-svc 
  namespace: ecommerce-service
spec:
  type: ClusterIP 
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: catalog-db
